@@ -22,7 +22,7 @@ end
 local CreateTracker
 if EHI:GetOption("gage_tracker_panel") == 1 then -- Tracker
     CreateTracker = function()
-        if EHI:IsVR() and managers.ehi_tracker:IsLoading() then
+        if managers.ehi_tracker:TrackerExists("Gage") or (EHI:IsVR() and managers.ehi_tracker:IsLoading()) then
             return
         end
         local max = tweak_data.gage_assignment:get_num_assignment_units()
